--- a/flipkart.html
+++ b/flipkart.html
@@ -29,9 +29,9 @@
                         class="flipkart d-block m-0 p-0">
                 </div>
 
-                <div class="search m-2 d-flex shadow bg-white ">
+                <div class="search m-2 d-flex shadow bg-white">
                     <form class="w-100" role="search">
-                        <input class="form-control rounded-0 w-100" type="search"
+                        <input class="flex-grow-1 form-control rounded-0 w-100" type="search"
                             placeholder="Search for products, brands and more" aria-label="Search">
                     </form>
                     <div class="d-flex align-item-center search-icon bg-white p-1 pe-3 pt-2">
@@ -136,47 +136,52 @@
         </div>
     </section>
     <div>
-        <!-- Carousel -->
-        <div id="carousel" class="carousel slide">
-            <div class="container carousel-inner justify-content-center mt-2 position-relative">
-                <div class="carousel-item active w-100">
-                    <img src="Images/carosel1.webp" class="d-block w-100" alt="carousel1" />
-                </div>
-                <div class="carousel-item">
-                    <img src="Images/carosel2.webp" class="d-block w-100" alt="carousel2" />
-                </div>
-                <div class="carousel-item">
-                    <img src="Images/carosel3.webp" class="d-block w-100" alt="carousel3" />
-                </div>
 
-                <button class="carousel-control-prev p-5" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <!-- Carousel -->
+        <div class="container-fluid ">
+            <div id="carousel" class="carousel container-fluid slide">
+                <div class="container-fluid carousel-inner justify-content-center mt-2 position-relative">
+                    <div class="carousel-item active w-100">
+                        <img src="Images/carosel1.webp" class="d-block w-100" alt="carousel1" />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="Images/carosel2.webp" class="d-block w-100" alt="carousel2" />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="Images/carosel3.webp" class="d-block w-100" alt="carousel3" />
+                    </div>
+
+                    <button class="carousel-control-prev p-5" type="button" data-bs-target="#carousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </div>
 
         <!-- Main Section-->
-        <section class="main-section container mt-3">
-            <div class="deals-of-the-day deal-section d-flex">
-                <div class="shadow deals-section-inner">
+        <section class="main-section container-fluid mt-4">
+            <div class="deals-of-the-day deal-section d-flex w-100">
+                <div class="shadow deals-section-inner deals-head">
                     <div class="main-seaction-title d-flex justify-content-between w-100">
-                        <div class="timer d-flex">
+                        <div class="time d-flex">
                             <h4>Deals of the Day <i class="bi bi-stopwatch text-danger"></i></h4>
                             <p class="fs-5 fw-light text-muted">22:07:36 Left</p>
                         </div>
                         <button type="button" class="btn btn-primary m-lg-1">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex">
+                    <div class="d-flex overflow-auto">
                         <div class="card deals-card" style="border: 0rem;">
                             <div class="image w-auto m-auto d-flex align-items-center">
                                 <img src="Images/watch.webp" class="card-img-top w-50 m-auto" alt="watch">
                             </div>
+
                             <div class="card-body">
                                 <p class="card-text">Watches</p>
                                 <p class="text-success">upto 80%</p>
@@ -194,7 +199,6 @@
                                 <p class="text-muted">Furniture</p>
                             </div>
                         </div>
-
 
                         <div class="card deals-card" style="border: 0rem;">
                             <div class="image w-auto m-auto d-flex align-items-center ">
@@ -239,6 +243,28 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
+
+                        <div class="card deals-card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center ">
+                                <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Water bottle</p>
+                                <p class="text-success">Flat ₹830 off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+
+                        <div class="card deals-card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center ">
+                                <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Water bottle</p>
+                                <p class="text-success">Flat ₹830 off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="advertise d-flex justify-content-between">
@@ -250,18 +276,18 @@
         </section>
 
         <!-- 2nd Main Section -->
-        <section class="main-section container mt-3 ">
+        <section class="main-section container-fluid mt-3">
             <div class="d-flex w-100 justify-content-between">
-                <div class="view-all shadow">
+                <div class="view-all shadow w-100">
                     <div class="main-seaction-title d-flex justify-content-between p-2">
-                        <div class="timer">
+                        <div class="product-title">
                             <h4>Music Instruments</h4>
                             <p class="text-muted">Shop Now!</p>
-                            
                         </div>
+                        <button type="button" class="button btn btn-primary">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex">
+                    <div class="d-flex overflow-auto">
                         <div class="card" style="border: 0rem;">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/harmonium.webp" class="card-img-top w-50 m-auto" alt="watch" />
@@ -283,7 +309,6 @@
                                 <p class="text-muted">Shop Now!</p>
                             </div>
                         </div>
-
 
                         <div class="card" style="border: 0rem;">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
@@ -330,22 +355,64 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Instruments</p>
+                                <p class="text-success">Upto 10% off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Instruments</p>
+                                <p class="text-success">Upto 10% off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Instruments</p>
+                                <p class="text-success">Upto 10% off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Instruments</p>
+                                <p class="text-success">Upto 10% off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- 3rd Main Section -->
-        <section class="main-section container mt-3 ">
+        <section class="main-section container-fluid mt-3 ">
             <div class="d-flex w-100 justify-content-between">
-                <div class="view-all shadow">
+                <div class="view-all shadow w-100">
                     <div class="main-seaction-title d-flex justify-content-between p-2">
-                        <div class="timer d-flex">
+                        <div class="product-title">
                             <h4>Holi Essentials </h4>
+                            <p class="text-muted">Shop Now!</p>
                         </div>
+                        <button type="button" class="button btn btn-primary">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex">
+                    <div class="d-flex overflow-auto">
                         <div class="card" style="border: 0rem;">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi1.webp" class="card-img-top w-50 m-auto" alt="watch" />
@@ -412,13 +479,34 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
+
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Color Removal</p>
+                                <p class="text-success">Flat ₹830 off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+
+                        <div class="card" style=" border: 0rem;">
+                            <div class="image w-auto m-auto d-flex align-items-center h-50">
+                                <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">Color Removal</p>
+                                <p class="text-success">Flat ₹830 off</p>
+                                <p class="text-muted">Now ₹999 only</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
-
 </body>
 
 </html>
